// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`expected behavior with update adds then removes nodes 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "detune": {
            "inputs": [],
            "value": 0,
          },
          "frequency": {
            "inputs": [],
            "value": 440,
          },
          "inputs": [],
          "name": "OscillatorNode",
          "type": "sine",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update adds then removes nodes 2`] = `
{
  "inputs": [],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update connects and reconnects nodes to audioParams 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "detune": {
            "inputs": [],
            "value": 0,
          },
          "frequency": {
            "inputs": [
              {
                "detune": {
                  "inputs": [],
                  "value": 0,
                },
                "frequency": {
                  "inputs": [],
                  "value": 0.5,
                },
                "inputs": [],
                "name": "OscillatorNode",
                "type": "triangle",
              },
            ],
            "value": 440,
          },
          "inputs": [],
          "name": "OscillatorNode",
          "type": "sine",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update connects and reconnects nodes to audioParams 2`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "detune": {
            "inputs": [
              {
                "detune": {
                  "inputs": [],
                  "value": 0,
                },
                "frequency": {
                  "inputs": [],
                  "value": 0.5,
                },
                "inputs": [],
                "name": "OscillatorNode",
                "type": "triangle",
              },
            ],
            "value": 0,
          },
          "frequency": {
            "inputs": [],
            "value": 440,
          },
          "inputs": [],
          "name": "OscillatorNode",
          "type": "sine",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update connects and reconnects nodes to audioParams 3`] = `
{
  "inputs": [
    {
      "detune": {
        "inputs": [],
        "value": 0,
      },
      "frequency": {
        "inputs": [],
        "value": 440,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update connects nodes to each other 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "detune": {
            "inputs": [],
            "value": 0,
          },
          "frequency": {
            "inputs": [],
            "value": 440,
          },
          "inputs": [],
          "name": "OscillatorNode",
          "type": "sine",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update connects nodes to each other 2`] = `
{
  "inputs": [
    {
      "detune": {
        "inputs": [],
        "value": 0,
      },
      "frequency": {
        "inputs": [],
        "value": 440,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update disconnects and reconnects child nodes properly 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "inputs": [
            {
              "gain": {
                "inputs": [],
                "value": 1,
              },
              "inputs": [],
              "name": "GainNode",
            },
          ],
          "name": "StereoPannerNode",
          "pan": {
            "inputs": [],
            "value": 0,
          },
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update disconnects and reconnects child nodes properly 2`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "gain": {
            "inputs": [],
            "value": 1,
          },
          "inputs": [
            {
              "gain": {
                "inputs": [],
                "value": 1,
              },
              "inputs": [],
              "name": "GainNode",
            },
          ],
          "name": "GainNode",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update handles random strings for ids 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "detune": {
            "inputs": [],
            "value": 0,
          },
          "frequency": {
            "inputs": [],
            "value": 440,
          },
          "inputs": [],
          "name": "OscillatorNode",
          "type": "sine",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update handles simple updates 1`] = `
{
  "inputs": [],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update handles simple updates 2`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update handles simple updates 3`] = `
{
  "inputs": [
    {
      "detune": {
        "inputs": [],
        "value": 0,
      },
      "frequency": {
        "inputs": [],
        "value": 440,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update handles simple updates 4`] = `
{
  "inputs": [
    {
      "inputs": [
        {
          "delayTime": {
            "inputs": [],
            "value": 0.3333333333333333,
          },
          "inputs": [
            {
              "gain": {
                "inputs": [],
                "value": 0.3333333333333333,
              },
              "inputs": [
                {
                  "delayTime": {
                    "inputs": [],
                    "value": 0.3333333333333333,
                  },
                  "inputs": [
                    {
                      "gain": {
                        "inputs": [],
                        "value": 0.3333333333333333,
                      },
                      "inputs": [
                        "<circular:DelayNode>",
                      ],
                      "name": "GainNode",
                    },
                  ],
                  "name": "DelayNode",
                },
              ],
              "name": "GainNode",
            },
          ],
          "name": "DelayNode",
        },
      ],
      "name": "StereoPannerNode",
      "pan": {
        "inputs": [],
        "value": 1,
      },
    },
    {
      "inputs": [
        {
          "delayTime": {
            "inputs": [],
            "value": 0.3333333333333333,
          },
          "inputs": [
            {
              "gain": {
                "inputs": [],
                "value": 0.3333333333333333,
              },
              "inputs": [
                {
                  "delayTime": {
                    "inputs": [],
                    "value": 0.3333333333333333,
                  },
                  "inputs": [
                    {
                      "gain": {
                        "inputs": [],
                        "value": 0.3333333333333333,
                      },
                      "inputs": [
                        "<circular:DelayNode>",
                      ],
                      "name": "GainNode",
                    },
                  ],
                  "name": "DelayNode",
                },
              ],
              "name": "GainNode",
            },
          ],
          "name": "DelayNode",
        },
      ],
      "name": "StereoPannerNode",
      "pan": {
        "inputs": [],
        "value": -1,
      },
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update reconnects nodes to each other 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "detune": {
            "inputs": [],
            "value": 0,
          },
          "frequency": {
            "inputs": [],
            "value": 440,
          },
          "inputs": [],
          "name": "OscillatorNode",
          "type": "sine",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update reconnects nodes to each other 2`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [],
      "name": "GainNode",
    },
    {
      "detune": {
        "inputs": [],
        "value": 0,
      },
      "frequency": {
        "inputs": [],
        "value": 440,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update updates standard and custom nodes if passed same id but different params 1`] = `
{
  "inputs": [
    {
      "detune": {
        "inputs": [],
        "value": -9,
      },
      "frequency": {
        "inputs": [],
        "value": 220,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update updates standard and custom nodes if passed same id but different params 2`] = `
{
  "inputs": [
    {
      "detune": {
        "inputs": [],
        "value": 0,
      },
      "frequency": {
        "inputs": [],
        "value": 880,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update updates standard and custom nodes if passed same id but different params 3`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [
        {
          "detune": {
            "inputs": [],
            "value": 0,
          },
          "frequency": {
            "inputs": [],
            "value": 110,
          },
          "inputs": [],
          "name": "OscillatorNode",
          "type": "sine",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`expected behavior with update updates standard and custom nodes if passed same id but different params 4`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.2,
      },
      "inputs": [
        {
          "detune": {
            "inputs": [],
            "value": 0,
          },
          "frequency": {
            "inputs": [],
            "value": 660,
          },
          "inputs": [],
          "name": "OscillatorNode",
          "type": "sine",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;
